# relay-agent

./: .dockerignore  .gitignore  Makefile  README.md  demo.py  docker-compose.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/src/relay_api/: __init__.py  app.py  demo_stub.py  meta.py  runs.py  schemas.py
api/tests/: conftest.py  test_approve.py  test_demo_stub.py  test_e2e_api.py  test_errors.py  test_handle.py  test_invariant.py  test_meta.py  test_meta_unit.py  test_projection.py  test_static.py
app/: README.md  Relay.dc.html  api.js  map.js  package.json
app/tests/: _gen_fixtures.py  a11y.test.js  api.test.js  component.test.js  crossstack.e2e.js  e2e_injection.py  e2e_live.py  edge.test.js  map.test.js  multipending.test.js  nobaked.test.js  replay.test.js  sendreply.test.js  states.test.js
app/tests/fixtures/: ambiguous_escalate.json  billing_approved.json  billing_awaiting.json  billing_rejected.json  config.json  examples.json  health.json  multi_pending.json  send_reply_pending.json  spam_noaction.json  tech_auto.json
core/: .env.example  README.md  pyproject.toml
core/examples/: ambiguous.json  billing_dispute.json  injection.json  tech_issue.json
core/src/relay/: __init__.py  agent.py  cli.py  cost.py  faithfulness.py  gate.py  models.py  prompts.py  tools.py
core/src/relay/backend/: __init__.py  db.py  schema.sql  seed.py
core/src/relay/provider/: __init__.py  anthropic.py  base.py  openai.py  stub.py
core/tests/: conftest.py  test_agent.py  test_agent_api.py  test_agent_cli.py  test_anthropic_provider.py  test_backend.py  test_cost.py  test_faithfulness.py  test_faithfulness_api.py  test_gate.py  test_models.py  test_openai_api.py  test_openai_parity.py  test_openai_provider.py  test_package.py  test_prompts.py  test_provider_base.py  test_public_api.py  test_seed.py  test_stub_provider.py  test_tools.py
docs/: architecture.md  writeup.md
docs/eval/: leaderboard-20260620.jsonl  leaderboard-20260620.txt
docs/media/: README.md  build_frames.py
docs/media/_frames/: 04-mobile-GATE.html  05-mobile-committed.html  06-mobile-injection.html
eval/: README.md  __init__.py  metrics.py  pyproject.toml  run.py  scenario.py
eval/scenarios/held_out/: held_out.yaml
eval/scenarios/must_gate/: safety_contract.yaml
eval/scenarios/tuning/: tuning.yaml
eval/tests/: conftest.py  test_cli.py  test_deterministic_tier.py  test_eval_api.py  test_isolation.py  test_jsonl.py  test_leaderboard.py  test_metrics.py  test_scenario.py
