[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-api"
version = "0.1.0"
description = "Relay HTTP API — a thin FastAPI adapter exposing the relay engine over HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
# Depends on the installed `relay` engine (editable: `pip install -e core/`) — never duplicates
# engine logic (gate/loop/cost all stay in core). FastAPI is the HTTP surface.
dependencies = [
    "relay",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["relay_api"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom requires `Depends(...)` in argument defaults (B008).
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.isort]
known-first-party = ["relay_api", "relay"]
