[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "0.1.0"
description = "Relay — a gated, eval-proven, multi-provider agentic ops-automation engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
# Provider SDKs + KB search are introduced in their own splits (02 / 05); declared
# here so the dependency set is honest and `pip install -e core/[providers]` works.
providers = [
    "anthropic>=0.40",
    "openai>=1.40",
    "rank_bm25>=0.2",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
relay = "relay.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# schema.sql ships inside the package so it loads via importlib.resources.
relay = ["backend/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["relay"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["relay"]
