[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-eval"
version = "0.1.0"
description = "Relay offline eval harness — gold scenarios, metrics, and the leaderboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
# Depends on the installed `relay` engine (editable: `pip install -e core/`) — never duplicates
# engine logic. PyYAML loads the gold scenarios.
dependencies = [
    "relay",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.setuptools]
# The eval package is the top-level `eval/` directory itself (this file lives inside it),
# so there is no src/ layout to discover; tests are not part of the distribution.
packages = ["eval"]
package-dir = { "eval" = "." }

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path (relative to this rootdir) so `import eval.metrics` resolves
# whether pytest is invoked from the repo root or from eval/. tests/conftest.py reinforces this.
pythonpath = [".."]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["eval"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["eval", "relay"]
